[metadata]
name = haproxyadmin
author = Pavlos Parissis
author-email = pavlos.parissis@gmail.com
maintainer = Pavlos Parissis
maintainer-email = pavlos.parissis@gmail.com
summary = A library to work with HAProxy via the stats socket
license = Apache 2.0
description-file = README.rst
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.4
        Topic :: Utilities
install_requires =
    six
keywords =
    haproxy

[files]
packages =
    haproxyadmin
